# vibecoding-starter

./: .gitignore  AGENTS.md  AGENT_START.md  CONTRIBUTING.md  INSTALLATION_GUIDE.md  LICENSE  README.md  SECURITY.md  SKILL_SELECTOR.md  VERIFICATION_CHECKLIST.md  deletesettingsjson  package-lock.json  package.json  pyproject.toml
.claude/: rebuild-registry.js  skills-index.json  skills-index.schema.json  skills.json  skills.schema.json
.devcontainer/: .env.example  Dockerfile  devcontainer.json  postCreate.sh
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  code-simplifier.agent.md  designer.agent.md  green.agent.md  pm.agent.md  product-orchestrator.agent.md  product-tester.agent.md  red.agent.md  refactor.agent.md  researcher.agent.md  review-test.agent.md  tdd.agent.md  tech-lead.agent.md
.github/prompts/: assimilate-repo.prompt.md  copilot_superpowers-brainstorm.prompt.md  cross-cutting-feature.prompt.md  journal-entry.prompt.md  root-cause-design.prompt.md
docs/: agentx-analysis.md
docs/plans/: 2026-01-24-skills-management-plan.md  2026-01-25-assimilation-skills-design-v2.md  2026-01-25-assimilation-skills-design-v3.md  2026-01-25-assimilation-skills-design.md  2026-02-03-tetris-game-design.md  2026-02-06-getting-started-tutorial-design.md  2026-02-13-make-my-girl-accept-me-design.md  TRD-assimilation.md  (+3 more)
make_my_girl_accept_me/: index.html  package-lock.json  package.json
projects/: .gitignore
src/: App.css  App.tsx  index.css
tutorial/: README.md  agent-orchestration-patterns.md  multi-agent-pipeline.md  powerpoint.md
(+49 files in other folders)
